--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
