--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnodejs-backend",
+  "name": "backend",
   "description": "Backend for SelfCommunity Test Project",
   "version": "0.0.0",
   "private": true,
