--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "description": "Backend for SelfCommunity Test Project",
   "version": "0.0.0",
   "private": true,
+  "engines": {"node": "8.1.1","npm": "5.0.3"},
   "scripts": {
-    "start": "node ./bin/www",
-    "heroku-postbuild": "npm run build"
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -19,4 +20,5 @@
     "mysql2": "^1.7.0",
     "sequelize": "^5.19.4"
   }
+ 
 }
